// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationModal matches snapshot when closed 1`] = `
<Styled(Modal)
  aria={
    {
      "describedby": "secondaryText",
      "labelledby": "question",
    }
  }
  isOpen={false}
  overlayClassName="modalOverlay"
  shouldCloseOnOverlayClick={true}
>
  <styled.span
    onClick={[Function]}
  >
    <Icon>
      <Glyph
        glyphColor="currentColor"
        name="Close"
        ratio={1}
      />
    </Icon>
  </styled.span>
  <styled.div>
    <Icon
      backgroundColor="hsla(0, 100%, 42.5%, 0.8)"
      backgroundStyle="BackgroundTriangleSmall"
      glyphColor="white"
      iconRatio={6}
    >
      <Glyph
        glyphColor="currentColor"
        name="Exclamation"
        ratio={1}
      />
    </Icon>
    <styled.h2
      id="question"
    >
      Will this test pass?
    </styled.h2>
    <styled.p
      id="secondaryText"
    >
      Only time will tell
    </styled.p>
  </styled.div>
  <styled.div>
    <Button
      clickAction={[Function]}
      label="Cancel"
    />
    <Button
      clickAction={[Function]}
      label="Confirm"
      type="danger"
    />
  </styled.div>
</Styled(Modal)>
`;

exports[`ConfirmationModal matches snapshot when open 1`] = `
<Styled(Modal)
  aria={
    {
      "describedby": "secondaryText",
      "labelledby": "question",
    }
  }
  isOpen={true}
  overlayClassName="modalOverlay"
  shouldCloseOnOverlayClick={true}
>
  <styled.span
    onClick={[Function]}
  >
    <Icon>
      <Glyph
        glyphColor="currentColor"
        name="Close"
        ratio={1}
      />
    </Icon>
  </styled.span>
  <styled.div>
    <Icon
      backgroundColor="hsla(0, 100%, 42.5%, 0.8)"
      backgroundStyle="BackgroundTriangleSmall"
      glyphColor="white"
      iconRatio={6}
    >
      <Glyph
        glyphColor="currentColor"
        name="Exclamation"
        ratio={1}
      />
    </Icon>
    <styled.h2
      id="question"
    >
      Will this test pass?
    </styled.h2>
    <styled.p
      id="secondaryText"
    >
      Only time will tell
    </styled.p>
  </styled.div>
  <styled.div>
    <Button
      clickAction={[Function]}
      label="Cancel"
    />
    <Button
      clickAction={[Function]}
      label="Confirm"
      type="danger"
    />
  </styled.div>
</Styled(Modal)>
`;
